<resources>
    <string name="app_name">PhoneBill</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="greeting">Welcome to PhoneBill</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="create_phone_bill">Create Phone Bill</string>
    <string name="enter_phone_call">Enter Phone Call</string>
    <string name="print_phone_bill">Print Phone Bill</string>
    <string name="search_phone_bill">Search Phone Bill</string>
    <string name="search_phone_call">Search Phone Calls</string>

    <string name="go_back">Go Back</string>
    <string name="go_back_home">Back To Home</string>

    <string name="readme">README</string>
    <string name="help">Help</string>
    <string name="ask_enter_customer_name">Please enter a customer name</string>
    <string name="ask_enter_phone_call">Please enter a phone call</string>

    <string name="customer_name">Customer name</string>
    <string name="caller">Caller Phone Number</string>
    <string name="callee">Callee Phone Number</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="phone_format">123-456-7890</string>
    <string name="date_format">12/25/2020</string>
    <string name="time_format">10:50</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>