<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPrintBillSearch">

    <EditText
        android:id="@+id/input_search_start_date"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:ems="5"
        android:hint="@string/date_format"
        android:inputType="date"
        android:textSize="@dimen/font_size"
        app:layout_constraintEnd_toStartOf="@+id/input_search_start_time"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/input_print_bill_search_customer" />

    <RadioGroup
        android:id="@+id/input_search_start_marker"
        android:layout_width="58dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/input_search_start_time"
        app:layout_constraintTop_toBottomOf="@+id/input_print_bill_search_customer">

        <RadioButton
            android:id="@+id/input_search_start_am"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/am" />

        <RadioButton
            android:id="@+id/input_search_start_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pm" />
    </RadioGroup>

    <EditText
        android:id="@+id/input_search_start_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="3"
        android:hint="@string/time_format"
        android:inputType="time"
        android:textSize="@dimen/font_size"
        app:layout_constraintEnd_toStartOf="@+id/input_search_start_marker"
        app:layout_constraintStart_toEndOf="@+id/input_search_start_date"
        app:layout_constraintTop_toBottomOf="@+id/input_print_bill_search_customer" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/start"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/input_search_end_date"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:ems="5"
        android:hint="@string/date_format"
        android:inputType="date"
        android:textSize="@dimen/font_size"
        app:layout_constraintEnd_toStartOf="@+id/input_search_end_time"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/input_search_start_date" />

    <RadioGroup
        android:id="@+id/input_search_end_marker"
        android:layout_width="58dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/input_search_end_time"
        app:layout_constraintTop_toBottomOf="@+id/input_search_start_marker">

        <RadioButton
            android:id="@+id/input_search_end_am"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/am" />

        <RadioButton
            android:id="@+id/input_search_end_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pm" />
    </RadioGroup>

    <EditText
        android:id="@+id/input_search_end_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="3"
        android:hint="@string/time_format"
        android:inputType="time"
        android:textSize="@dimen/font_size"
        app:layout_constraintEnd_toStartOf="@+id/input_search_end_marker"
        app:layout_constraintStart_toEndOf="@+id/input_search_end_date"
        app:layout_constraintTop_toBottomOf="@+id/input_search_start_time" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/end"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/button_print_bill_search_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_print_bill_search_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/button_print_bill_search_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/search_phone_bill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_print_bill_search_go_back"
        app:layout_constraintTop_toBottomOf="@+id/input_search_end_date" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:text="@string/customer_name"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_print_bill_search_customer"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/customer_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>